# The_GNU_Make_Handbook

./: README.md
example0/: Makefile
example1/: Makefile  main.c
example10/: .ninja_log  CMakeLists.txt  Makefile  build.ninja  main.c
example11/: .ninja_log  CMakeLists.txt  Makefile  build.ninja  main.c
example12/: .ninja_log  CMakeLists.txt  Makefile  build.ninja
example13/: .ninja_log  CMakeLists.txt  Makefile  build.ninja
example14/: CMakeLists.txt  Makefile  build.ninja
example15/: CMakeLists.txt  Makefile  build.ninja
example16/: CMakeLists.txt  Makefile  build.ninja  linker.ld
example16/include/: uart.h
example16/src/: main.c  startup.c  uart.c
example17/: CMakeLists.txt  build.ninja
example18/: .ninja_log  Makefile  mathlib.c  mathlib.h
example19/: Makefile  main.c  mathlib.c
example2/: Makefile
example20/: Makefile  tool.c
example21/: CMakeLists.txt  app1.c  app2.c
example22/: .ninja_log  build.ninja
example23/: .ninja_log  CMakeLists.txt  Makefile  README.txt  build.ninja
example24/: readme.txt
example25/: readme.txt
example3/: Makefile  Makefile_conditional  Makefile_string  output.txt
example4/: Makefile  Makefile2  main.c
example4/test/: Makefile
example5/: Makefile  util.c
example6/: Makefile  main.c  mathlib.h
example7/: Makefile  Makefile1  Makefile2  main.c  mathlib.h
example8/: Makefile  mul.c
example9/: Makefile  linker.ld
example9/src/: app.c  main.c  uart.c
